fix: adjust disclaimer text align to center

--- a/public/scss/components/Disclaimer.module.scss
+++ b/public/scss/components/Disclaimer.module.scss
@@ -18,6 +18,7 @@
     position: relative;
     margin: 0;
     padding: 0;
+    text-align: center;
 
     a
     {
